Fix text overflow issues

--- a/src/components/presentational/Action/Action.css
+++ b/src/components/presentational/Action/Action.css
@@ -13,6 +13,7 @@
 .mdhui-action .mdhui-action-body {
     flex-grow: 1;
     max-width: 100%;
+    min-width: 0;
 }
 
 .mdhui-action .title {
